--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -54,9 +54,9 @@
 
 * 坚持**自信自立**，突出强调和体现的是：要把**尊重客观规律和激发创新创造活力贯通起来**。
 
-* 守正创新深刻揭示了**“变”与“不变”、继承与发展的辩证统一**。
+* **守正创新**深刻揭示了**“变”与“不变”、继承与发展的辩证统一**。
 
-* 增强问题意识、坚持问题导向，就是承认矛盾的普遍性、客观性，就是要**善于把认识和化解矛盾作为打开工作局面的突破口**。
+* 增强**问题意识**、坚持问题导向，就是承认矛盾的普遍性、客观性，就是要**善于把认识和化解矛盾作为打开工作局面的突破口**。
 
   把握**底线思维**，就要**凡事从坏处准备，努力争取最好的结果**，这样才能有备无患、遇事不慌，牢牢把握主动权。
 
@@ -184,13 +184,15 @@
 
 28.真理是一个发展过程，**既是绝对的，又是相对的**，这是真理问题上的辩证法（所以不能说真理从相对到绝对）
 
+28a.**真理和谬误在一定条件下可以相互转化**。在批判谬误中发展真理，是谬误向真理转化的一种形式。
+
 29.真理是**具体的**，任何真理都是在一定范围内、条件下才成立。
 
 30.人的**本质**是**一切社会关系的总和**
 
 31.**真理的客观性**指**真理的内容**是对客观事物及其规律的正确反映，包含着不依赖于人和人的意志的**客观内容**。但是真理本身不是一种**客观实在**。
 
-32.**真理是一元的**，**真理本身没有主体的差别**，而**价值是多元的**，**不同的主体有不同的需要**，不同的价值要求和价值选择。
+32.**真理是一元的**，**真理本身没有主体的差别**，而**价值是多元的**，**不同的主体有不同的需要**，不同的价值要求和价值选择。真理的客观性决定了真理的一元性。真理的一元性是指在**同一条件下对于特定的认识客体的真理性认识只有一个，而不可能有多个**。
 
 **客体能否满足主体的需要**，并**不由人的主观愿望决定**，而是由**客体客观存在的性质、属性等决定**。
 
@@ -292,7 +294,7 @@
 
 34.**社会意识具有相对独立性**（指A决定B，但B又有自己特有的发展形式和规律）
 
-35.**物质资料的生产方式**构成了人类社会存在和发展的基础，**集中体现**着人类社会的**物质性**。
+35.**物质资料的生产方式**构成了人类社会存在和发展的**基础及决定力量**，**集中体现**着人类社会的**物质性**。
 
 36.**生产关系**不是人与人之间的一般的社会关系，而是**人与人之间的经济关系**，即**物质利益关系**。
 
@@ -455,7 +457,7 @@
 
 **劳动力价值的最低界限是由生活上不可缺少的生活资料的价值决定**的。
 
-73.
+73.在资本主义条件下，劳动从进入生产过程开始，就已经隶属于资本，在表面平等的交换关系背后，是资本对劳动的实际支配和控制。在资本主义发展的初期，资本家指挥下的劳动只是**形式上隶属于资本**，随着机器大工业生产体系的建立，生产工具使用的社会化程度提高，**劳动者个人的技能不再对生产过程和结果具有决定意义**，劳动对资本的隶属就成为**实质上的隶属**。
 
 74.在**价值增殖过程中**，雇佣工人的**劳动时间分为两部分**：一部分是**必要劳动时间**，用于再生产劳动力的价值；另一部分是**剩余劳动时间**，用于无偿地为资本家生产剩余价值。
 
@@ -478,6 +480,13 @@
 77.资本家**追求超额剩余价值**，上述过程的客观后果是整个**社会各个生产部门的劳动生产率普遍提高**，导致生活资料的价值下降和补偿劳动力价值的必要劳动时间缩短，剩余劳动时间相对延长，整个**资本家阶级普遍获得更多的相对剩余价值**。
 
 78.**资本积累**是指**剩余价值资本化**。**资本集中**是**大资本吞并小资本，或由许多小资本合并成大资本的过程**，是资本主义社会**失业的根源**。
+
+78a.**资本主义产生的途径**有两个：
+
+1. 从小商品经济中分化出来，
+2. 从商人和高利贷者转化而来。
+
+**用暴力手段剥夺农民的土地**和**用暴力手段掠夺货币财富**，是**资本原始积累的两个主要途径**
 
 79.**资本积累的源泉**是工人创造的**剩余价值**，**资本积累**又是**资本主义扩大再生产的源泉**
 
@@ -623,6 +632,22 @@
 
 98.国家垄断资本的**实质**是私人垄断资本利用国家机器来为其发展服务的手段
 
+98a.国家垄断资本主义的主要形式有五种：
+
+1. 第一种是国家所有并**直接经营企业**。
+2. 第二种是**国家与私人共有、合营**企业。
+3. 第三种是国家**通过多种形式参与私人垄断资本的再生产**过程，包括国家作为商品和劳务的采购者，向私人垄断企业大量订货，为私人垄断企业提供有保证的国家市场；国家通过各种形式的**津贴和补助**，直接、间接地资助私人垄断企业；国家通过**社会福利开支，提高社会购买力，扩大消费需求**，为私人垄断企业创造市场条件。
+4. 第四种是**宏观调节**。
+5. 第五种是**微观规制**，主要是国家运用法律手段规范市场秩序，限制垄断，保护竞争，维护社会公众的合法权益。
+
+98b.**国家垄断资本主义的形成和发展**不是偶然的，它是科技进步和生产社会化程度进一步提高的产物，是资本主义基本矛盾进一步尖锐化的必然结果：
+
+1. 首先，**社会生产力的发展**，要求资本主义生产资料在更大范围内被支配，从而促进了国家垄断资本主义的产生。
+2. 其次，**经济波动和经济危机的深化**，推动国家垄断资本主义的产生。
+3. 最后，**缓和社会矛盾、协调利益关系的需求**，促使国家垄断资本主义的产生。
+
+“社会主义制度初步显示的优越性对资本主义产生了重要影响”是第二次世界大战后资本主义发生变化的原因之一，与题干无关。（而且早在第一次世界大战期间，国家垄断资本主义就已经产生，社会主义阵营是在二战后才形成的）
+
 99.**早期国际垄断同盟**的主要形式是**国际卡特尔、国际托拉斯、国际康采恩**；
 
 100.**当代国际垄断同盟**的主要形式是**国家垄断资本主义的国际联盟**
@@ -733,6 +758,13 @@
 * ③导致财富占用两极分化的制度基础没有改变
 * ④**改变**的是**获取剩余价值的方式和方法**（比如无人车间、自动化等等）
 
+0103a.第二次世界大战后，资本主义发生变化的原因主要有以下几个方面：
+
+1. 首先，**科学技术革命和生产力的发展**，是资本主义发生变化的根本推动力量。第二次世界大战后，世界**发生了第三次科技革命**，极大地促进了生产力的发展。西方主要资本主义国家劳动生产率提高，产业结构改善，经济快速发展。
+2. 其次，**工人阶级争取自身权利和利益的斗争**，是推动资本主义发生变化的重要力量。第二次世界大战后，发达资本主义国家工人为了维护自己的利益，继续同资产阶级展开斗争。西方国家的工人阶级为提高工资、改善劳动条件和生活条件、反对垄断资本主义的侵略政策和战争政策等开展的政治斗争，迫使**资产阶级作出重大让步，进行某些社会改革**。
+3. 再次，**社会主义制度初步显示的优越性对资本主义产生了重要影响**。
+4. 最后，主张**改良主义的政党对资本主义制度的改革**，也对资本主义发生变化起到了重要作用。
+
 0104.资本主义变化的新特征
 
 * ①科技创新加速资本主义生产方式变化。
@@ -740,7 +772,7 @@
   * b.生产组织和劳动形式的变化。数据成为一种新的生产要素，数字劳动地位日益凸显。
   * c.新经济形态的出现。数字经济、智能经济、共享经济等等
 * ②国际金融垄断资本主义影响日益显现
-* ③社会阶级层级结构呈现复杂性、多样化
+* ③**社会阶级层级结构呈现复杂性、多样化**
 * ④发达资本主义国家凭借经济、科技、文化传播等超级优势，在世界范围内推行
 
 0105.资本主义国家内部的矛盾和冲突日益明显：
@@ -781,9 +813,17 @@
 
 106.19世纪的三大先进思潮（德国古典哲学、英国古典政治经济学、英法空想社会主义）为马克思主义的创立提供了**直接的理论来源**。19世纪的三大科学发现（细胞学说、能量守恒与转化定律、生物进化论）为马克思主义的产生提供了**自然科学前提**
 
-107.科学社会主义的**核心命题**：资本主义必然灭亡，社会主义必将胜利。
+107.科学社会主义的**核心命题**：资本主义必然灭亡，社会主义必将胜利。也是共产主义理想信念的**核心要义**，在科学社会主义理论与实践中具有**首要和基础的地位**。
+
+107a.马克思指出：“无论哪一个社会形态，在它所能容纳的全部生产力发挥出来以前，是决不会灭亡的；而新的更高的生产关系，在它的物质存在条件在旧社会的胎胞里成熟以前，是决不会出现的。”这就是人们通常所说的“两个决不会”，它深刻揭示了**社会形态更替的条件性**。因此，要把“两个必然”和“两个决不会”联系起来全面把握。
 
 108.造成社会主义发展道路多样性的原因：**时代和实践的不断发展**
+
+108a.**探索社会主义发展道路**，必须：
+
+1. 坚持对待马克思主义的科学态度
+2. 从当时当地的历史出发，坚持“**走自己的路**”
+3. **充分吸收一切文明的成果**(容易漏选)
 
 0106.社会主义从空想发展到科学，是因为马克思、恩格斯在新的历史条件下创立了：
 
@@ -856,6 +896,16 @@
 3. 提出了加强国家政权建设和发扬社会民主的一系列措施
 4. 提出“**根据经验来谈论社会主义**”
 
+0116a.列宁在被人们称为“政治遗嘱”的文章和书信中，对十月革命以来所走过的道路进行了深入的思考，提出了建设社会主义的新构想。这些思想主要包括：
+
+1. 用合作社的形式将农民引向社会主义道路；
+2. 发展大工业，实现工业化和电气化；
+3. 学习和利用资本主义**一切有价值**的东西；
+4. 进行**文化革命**，大力发展文化教育事业；
+5. 进行党和国家机构的改革，努力提高干部的素质和能力；
+6. 必须反对官僚主义，健全社会主义民主和法制；
+7. 维护党的团结，特别是党中央领导核心的团结；等等。这些构想具有重要意义。
+
 0117.苏联的**农业合作化**是在20世纪30年代前中期完成的，**苏联模式**也是在这个时期形成的（列宁逝世后），**不在新经济政策时期**。
 
 0118.**社会主义发展道路的多样性**中，“各国人口因素和自然地理环境的不同是造就社会主义发展道路多样性的决定因素”属于**人口和地理决定论**的观点，是错误的。（注意决定、根本、基本等字眼）
@@ -885,6 +935,8 @@
 ### 导论 马克思主义中国化时代化的历史进程与理论成果
 
 1.1938年，毛泽东在党的六届六中全会上作了《论新阶段》的报告。**标志着“马克思主义的中国化”这一命题的正式提出**。
+
+“**没有抽象的马克思主义，只有具体的马克思主义**···马克思主义的中国化，使之**在其每一表现中带着中国的特性**，即是说，**按照中国的特点去应用它**，成为全党亟待了解并亟须解决的问题。”
 
 2.1945年，党的七大将以毛泽东为主要代表的中国共产党人把马克思列宁主义基本原理同中国具体实际相结合所创造的理论成果，正式命名为毛泽东思想，并规定为党的一切工作的指针。把**毛泽东思想确立为党的指导思想并写入党章**，是**党的七大**的历史性贡献。
 
@@ -1238,6 +1290,13 @@
 
 42.**和平统一，一国两制”**构想的提出，最早是针对**台湾问题提出来的**。
 
+42a.“文化大革命”结束后，邓小平同志作为党的第二代中央领导集体的核心，带领党和人民成功开创了我国改革开放和社会主义现代化建设新时期，开创中国特色社会主义。邓小平同志领导了伟大历史转折：
+
+1. 推动实现了马克思主义中国化新的飞跃；
+2. 带领党和人民开辟了社会主义现代化建设新局面；
+3. **确立了实现祖国完全统一的正确路径**；
+4. 坚定捍卫了光辉的社会主义旗帜。
+
 037.社会主义初级阶段的科学含义是：
 
 1. 我国**已经进入**社会主义社会
@@ -1247,11 +1306,13 @@
 
 038.**社会主义本质理论**正确回答了**邓小平理论首要的基本的理论问题**，即什么是社会主义，怎样建设社会主义。
 
-039.判断改革和各方面是非得失，归根到底，主要看（“三个有利于”标准）：
+039.判断**改革和各方面是非得失**，归根到底，主要看（“三个有利于”标准）：
 
 1. 是否有利于发展社会主义社会的**生产力**
 2. 是否有利于增强社会主义国家的**综合国力**
 3. 是否有利于提高**人民生活水平**
+
+（干扰选项：是否有利于**完善社会主义生产关系**）
 
 040.计划和市场都**<u>不属于</u>社会基本制度的范畴**，计划经济和市场经济**不是划分社会制度的标志**，计划和市场都是**经济手段**。
 
@@ -1297,7 +1358,7 @@
 
 47.马克思主义政党**自身建设**的**根本任务**和**永恒课题**是：**保持和发展党的先进性**
 
-48.坚持中国特色社会主义政治发展道路，**最根本的是要坚持党的领导、人民当家作主、依法治国有机统一**。
+48.坚持中国特色社会主义政治发展道路（走中特政治道路），**最根本的是要坚持党的领导、人民当家作主、依法治国有机统一**。
 
 其中，**党的领导**是**人民当家作主和依法治国**的**根本保证**，**人民当家作主**是社会主义民主政治的**本质和核心**，**依法治国**是党领导人民治理国家的**基本方略**。
 
@@ -1393,6 +1454,12 @@
 
 04.**全面建成小康社会（2020年）**是中国特色社会主义**进入新时代之后**的事情。
 
+04a.**全面小康**是全体人民的小康，表现在：
+
+* 不让一个人掉队
+* 城乡融合发展
+* 区域协调发展
+
 ### 第二章 以中国式现代化全面推进中华民族伟大复兴
 
 7.实现中华民族伟大复兴的中国梦的**本质**是：
@@ -1440,15 +1507,26 @@
 
 ### 第三章 坚持党的全面领导
 
-12.中国特色社会主义的最本质特征：**中国共产党领导**
+12.中国特色社会主义的**最本质特征**：**中国共产党领导**
+
+12a.中国特色社会主义的**最鲜明的特色**：**理论创新和实践创新、制度自信和文化自信紧密结合**。
 
 13.马克思主义政党第一位的能力：**政治领导力**
 
-14.党的领导的最高原则：**党中央集中统一领导**
+14.党的领导的**最高原则**：**党中央集中统一领导**
+
+* 党的**灵魂和旗帜**——**马克思主义**
+* 全党要牢记的**根本问题**是——中国共产党是什么、要干什么
+* 中国共产党团结带领中国人民进行一切奋斗、一切牺牲、一切创造，归结起来就是一个**主题**——实现中华民族伟大复兴
+* 党和人民历经千辛万苦、付出巨大代价取得的**根本成就**是——中国特色社会主义
 
 06.中国特色社会主义之所以是社会主义，**究其根本就在于坚持科学社会主义基本原则，在于坚持中国共产党的领导**。（正好从中国特色和社会主义两方面回答）
 
 07.党的领导是**全面的、系统的、整体的**，并不是说党组织包揽包办一切、事无巨细什么都去管，而是在各级各种组织中发挥领导核心作用，既善于总揽全局，又善于协调各方。
+
+07a.习近平总书记在庆祝全国人民代表大会成立70周年大会上的讲话中指出，人民代表大会制度**坚持**党的领导、人民当家作主、依法治国有机统一，**坚决维护**党中央权威和集中统一领导，**坚持**党总揽全局、协调各方的领导核心作用，**有利于**从制度上法律上坚持和巩固党的领导地位和执政地位，**确保党的主张通过法定程序成为国家意志**，**确保党组织推荐的人选通过法定程序成为国家政权机关领导人员**，**确保党通过国家政权机关实施对国家和社会的领导**，**保证**党的理论、路线、方针政策和决策部署在国家工作中得到全面贯彻。这**有效克服**了旧中国那种群龙无首、一盘散沙和党争纷沓、相互攻讦的现象。
+
+​	中国特色社会主义法治体系是由法律规范体系、法治实施体系、法治监督体系、法治保障体系和党内法规体系构成的统一体。法律规范体系是以宪法为核心，由部门齐全、结构严谨、内部协调、体例科学、调整有效的法律规范所构成的有机整体。党内法规体系是以党章为根本，以民主集中制为核心，以准则、条例等中央党内法规为主干，以部委党内法规、地方党内法规为重要组成部分，由各领域各层级党内法规组成的有机统一整体。
 
 08.党的领导制度是我国的**根本领导制度**。
 
@@ -1515,6 +1593,12 @@
 | 开放       | 国家繁荣发展的必由之路                           | 发展内外联动问题     |
 | 共享       | 中国特色社会主义的本质要求                       | 社会公平正义问题     |
 
+* 贯彻新发展理念明确了我国社会主义现代化建设的**指导原则**
+* 完整、准确、全面贯彻新发展理念，必须更加注重**共同富裕问题**
+* **建设现代化经济体系**是我国发展的**战略目标**
+* 推动高质量发展为**主题**
+* 我国要构建的开放型经济体系的内容是——**互利共赢、多元平衡、安全高效**；
+
 23.推动**高质量发展的主线**是：**深化供给侧结构性改革**
 
 24.高质量发展
@@ -1534,10 +1618,20 @@
 * **特点**是**创新**（新质生产力的显著特点是创新，既包括技术和业态模式层面的创新，也包括管理和制度层面的创新）
 * **关键**在**质优**
 * **本质**是**先进生产力**。
-* 科技创新能够**催生新产业、新模式、新动能**，是发展新质生产力的**核心要素**。
+* **科技创新**能够**催生新产业、新模式、新动能**，是发展新质生产力的**核心要素**。
 * 发展新质生产力的**重点任务**是：**培育新产业**。
+* **战略性新兴产业、未来产业**是发展新质生产力的**主阵地**。
+* 传统产业通过转型升级，也能成为新质生产力的重要部分。
 
-26.**构建新发展格局**的**最本质的特征**是**实现高水平的自立自强**
+26.构建新发展格局：
+
+1. 坚持扩大内需这一**战略基点**
+2. 坚持供给侧结构性改革的**战略方向**
+3. **关键**在于经济循环畅通无阻
+4. 构建新发展格局的**最本质特征**是**实现高水平自立自强**
+5. **重要前提和保障**： **牢牢守住安全发展这条底线**
+
+新发展格局的**内容**是——**国内大循环为主体、国内国际双循环相互促进**
 
 27.**保持优势产业的领先地位**，是支撑我国国际竞争力的**基石**。
 
@@ -1554,7 +1648,14 @@
 | 产业兴旺、生态宜居、乡风文明、治理有效、生活富裕 | 总要求   |
 | 建立健全城乡融合发展体制机制和政策体系           | 制度保障 |
 
-30a.深化农村改革，**最大的政策**就是**坚持和完善农村基本经营制度**，也是党的农村政策的**基石**。
+30a.习近平总书记指出：“在现代化进程中，如何处理好工农关系、城乡关系，在一定程度上决定着现代化的成败。”党的二十届三中全会《决定》对完善城乡融合发展体制机制作出重要战略部署，必将对推进中国式现代化产生重大而深远的影响。
+
+1. 完善城乡融合发展体制机制是补上农业农村短板、建设农业强国的**现实选择**。
+2. 完善城乡融合发展体制机制是拓展现代化发展空间、推动高质量发展的**迫切需要**。
+3. 完善城乡融合发展体制机制是满足人民对美好生活的向往、促进共同富裕的**内在要求**。
+4. **推进乡村全面振兴**是**新时代“三农”工作的<u>总抓手</u>**。
+
+30b.深化农村改革，**最大的政策**就是**坚持和完善农村基本经营制度**，也是党的农村政策的**基石**。
 
 * 城乡融合发展的**目标**：促进城乡要素平等交换、双向流动。
 * 完善城乡融合发展体制机制的**重点任务**：完善强农惠农富农支持制度、深化土地制度改革
@@ -1587,9 +1688,11 @@
 
 014.**社会主义初级阶段**并**不是**所有国家实现社会主义现代化所**必须经历的阶段**，**新发展阶段**也一样。
 
-015.**国家安全**是民族复兴的根基，**社会稳定**是国家强盛的前提。
+015.**国家安全**是民族复兴的**根基**，**社会稳定**是国家强盛的**前提**。
 
 015a.**①健全国家安全体系②加强国家安全制度建设**，是保障国家安全的**治本之策**，是维护和塑造国家安全的**重要支撑**。
+
+015b.国家安全是安邦定国的**重要基石**，是人民安居乐业的**保证**；安全和发展是“**体之两翼，驱之双轮**”；发展是安全的**基础**，安全是发展的**保障**；
 
 016.全面实施乡村振兴战略要处理好的关系：
 
@@ -1633,7 +1736,14 @@
 
 ### 第八章 发展全过程人民民主
 
-36.
+36.社会主义新型民族关系——民族平等团结互助和谐
+
+* 我国处理民族关系的原则——民族平等团结和共同繁荣
+
+36a.宗教事务处理原则：
+
+* 独立自主自办
+* 政教分离原则
 
 37.**中华民族共同体意识**是**民族团结之本**。
 
@@ -1647,9 +1757,12 @@
 
 019.**民主**是**全人类共同价值**，是人类政治文明发展的成果。
 
-020.**全过程人民民主**是**全链条、全方位、全覆盖**的民主，是**最广泛、最真实、最管用**的民主。
+020.**全过程人民民主**是不仅有**完整的制度程序**，而且有**完整的参与实践**。
+
+* **全过程人民民主**是**全链条、全方位、全覆盖**的民主，是**最广泛、最真实、最管用**的民主。
 
 * **全过程人民民主**是**新时代我国民主政治领域具有重大创新意义的标志性成果**。
+* 中国实行的社会主义民主政治是体现人民意志、符合中国国情、得到人民拥护的民主
 
 021.具有**鲜明中国特色的新型政党制度的内容**：“**共产党领导、多党派合作，共产党执政，多党派参政**。”
 
@@ -1658,6 +1771,12 @@
 023.**统一战线**并**不用于**团结国际社会共同反对霸权主义、单边主义斗争。
 
 024.中华民族共同体意识：**休戚与共、荣辱与共、生死与共、命运与共**。
+
+024a.党的民族工作：
+
+1. 主线——筑牢中华民族共同体意识
+2. 出发点和落脚点——实现中华民族伟大复兴
+3. 重要任务——推动各民族为全面建设社会主义现代化国家共同奋斗
 
 025.加强和促进海内外中华儿女大团结，要辩证把握的关系是：
 
@@ -1697,6 +1816,13 @@
 2. 坚持**法治国家、法治政府、法治社会**一体建设
 3. 坚持统筹推进**国内法治和涉外法治**
 
+029a.“法治”与“法制”的区别和联系体现在：
+
+* 法制是**法律统治**的简称，是一种治国原则和方法
+* 法制是法律制度的简称，属于制度的范畴
+* 法制是法治的**基础和前提条件**
+* 法治是法制的**立足点和归宿**
+
 ### 第十章 建设社会主义文化强国
 
 41.建设社会主义文化强国、推动社会主义文化繁荣兴盛，关键在于**坚定中国特色社会主义文化自信**。
@@ -1707,8 +1833,8 @@
 
 44.
 
-* 中华文明的**连续性**，从根本上决定了**中华民族必然走自己的路**。
-* 中华文明的**统一性**，从根本上决定了**中华民族各民族文化融为一体**。
+* 中华文明的**连续性**，从根本上决定了**中华民族必然走自己的路**（党的百年奋斗得出的历史结论是——走自己的路，是党的全部**理论和实践的立足点**）。
+* 中华文明的**统一性**，从根本上决定了**中华民族各民族文化融为一体**。（中华文明在长期历史演进中形成多元一体的格局，是**统一性**的体现）
 * 中华文明的**创新性**，从根本上决定了**中华民族守正不守旧、尊古不复古的进取精神**。
 
 45.满足人民精神文化需求、保障人民文化权益的**基本途径**是：**繁荣发展文化事业和文化产业**。
@@ -1742,12 +1868,14 @@
 
 035.创新创造是**文化的生命所在**，是**文化的本质特征**。
 
+035a.习近平强调：激发全民族文化创新创造活力。坚持以人民为中心的创作导向，坚持把社会效益放在首位、社会效益与经济效益相统一，把**激发创新创造活力**作为深化文化体制机制改革的**中心环节**，加快完善文化管理体制和生产经营机制。
+
 036.**中华民族创造的优秀传统文化**是我们区别于其他国家和民族的**根本特征**。
 
 037.新时代新的**文化使命**，是在新的起点上：
 
 1. 继续推动文化繁荣
-2. 建设文化强国
+2. 建设文化强国（建设文化强国的**关键**——激发全民族的文化创造力）
 3. 建设中华民族现代文明
 
 038.文艺工作者的神圣职责：**弘扬中国精神、传播中国价值、凝聚中国力量**。
@@ -1759,9 +1887,9 @@
 1. 守正不守旧、尊古不复古的进取精神
 2. 不惧新挑战、勇于接受新事物的无畏品格
 
-041.中华文明的**连续性**从根本上决定了中华民族必然走自己的路。
+041.
 
-042.中华文明在长期历史演进中形成多元一体的格局，是**统一性**的体现。
+042.
 
 043.中华民族**最基本的文化基因**：（干扰项：与国际接轨）
 
@@ -1815,13 +1943,58 @@
 
 048a.新时代新征程就业工作的**新定位、新使命**：**促进高质量充分就业**
 
-
+048b.产权是所有制的核心，**产权保护制度**是社会主义市场经济运行的**基石**。**市场准入**是经营主体参与经济活动的**前提**，**市场准入制度**是政府与市场关系的**集中体现**。**公平竞争**是**市场经济的核心**，公平竞争制度是实现资源配置效率最优化和效益最大化的**重要保障**。市场经济同时也是信用经济，社会信用制度是市场经济健康规范高效有序运行的**重要基础**。
 
 ### 第十二章 建设社会主义生态文明
 
 51.**生态环境问题归根到底**是**经济发展方式和生活方式问题**。
 
+51a.生态文明理念：
+
+1. 尊重自然是人与自然相处的**首要态度**；
+2. 顺应自然是 人与自然和谐相处时应遵循的**基本原则**；
+3. 保护自然是人与自然相处时应承担的**重要责任**；
+4. 生态文明的**核心**——坚持人与自然和谐共生
+
+51b.协调人与自然的和谐关系，要以(开启人类高质量发展新征程主张的内容)：
+
+1. 生态文明建设为**引领**，协调人与自然关系
+2. 绿色转型为**驱动**，助力全球可持续发展
+3. 人民福祉为**中心**，促进社会公平正义
+4. 国际法为**基础**，维护公平合理的国际治理体系
+
+51c.人与自然和谐发展应该：
+
+1. 节约资源放在**首位**
+2. 环保工作中——预防为主、源头治理放在**首位**
+3. 生态系统保护和修复中，把利用自然力修复生态系统放在**首位**，这是我国生态文明建设的**方向和重点**。
+
 52.解决生态环境问题的**治本之策**是：**绿色低碳发展**；**基础之策**：**促进经济社会发展全面绿色转型**；
+
+52a.《中共中央国务院关于加快经济社会发展全面绿色转型的意见》指出，**加快产业结构绿色低碳转型**，要：
+
+1. 推动传统产业绿色低碳改造升级；
+2. 大力发展绿色低碳产业；
+3. 加快数字化绿色化协同转型发展。
+
+**构建绿色低碳高质量发展空间格局的措施**：
+
+1. 优化国土空间开发保护格局
+2. 打造绿色发展高地
+
+**稳妥推进能源绿色低碳转型**：
+
+1. 加强化石能源清洁高效利用
+2. 大力发展非化石能源
+3. 加快构建新型电力系统
+
+52b.促进经济社会发展全面绿色转型：
+
+1. 实现减污降碳协同增效作为**总抓手**
+2. 强化国土规划和用途管控
+3. 抓住资源利用这个**源头**
+4. 抓住产业结构调整这个**关键**
+5. 要支持绿色低碳技术创新成果转化
 
 049.我们生态环境保护结构性、根源性、趋势性压力**尚未**根本缓解，生态文明建设仍处于压力叠加、负重前行的关键期。
 
@@ -1843,6 +2016,8 @@
 4. 只有把最关键最核心的技术掌握在自己手中，才能从根本上保障国家经济安全、国防安全和其他安全。
 5. 核心技术受制于人是我们最大的隐患，尤其是在激烈的国际竞争面前，在单边主义、保护主义上升的大背景下，不掌握核心技术，我们就会被“卡脖子”“牵鼻子”。建设世界科技强国，需要标志性科技成就。
 
+53b.经济是国防的基本依托、国防是经济的安全保障。
+
 54.总体国家安全观：
 
 | 总体国家安全观           | 地位       |
@@ -1853,7 +2028,12 @@
 | 军事、科技文化、社会安全 | 保障       |
 | 国际安全                 | 依托       |
 
-55.构建**新发展格局**的**重要前提和保障**：**牢牢守住安全发展这条底线**。
+55.加快构建新发展格局举措：
+
+1. 扭住扩大内需战略基点，畅通国民经济循环
+2. 大力推动科技创新，打造经济发展新动能
+3. 发挥全面深化改革在构建新发展格局中的关键作用
+4. 必须深刻把握国内国际双循环相互促进的关系
 
 56.政治安全、人民安全、国家利益至上三者统一
 
@@ -1877,12 +2057,18 @@
 
 58.习近平强军思想
 
-| 习近平强军思想         | 地位                       |
-| ---------------------- | -------------------------- |
-| 军民融合发展           | 兴国之举、强军之策         |
-| 党对人民军队的绝对领导 | 人民军队建军之本、强军之魂 |
-| 依法治军               | 建军治军基本方式           |
-| 作风优良               | 我军鲜明特色和政治优势     |
+| 习近平强军思想         | 地位                                     |
+| ---------------------- | ---------------------------------------- |
+| 军民融合发展           | 兴国之举、强军之策（富国强军的根本途径） |
+| 党对人民军队的绝对领导 | 人民军队建军之本、强军之魂               |
+| 依法治军               | 建军治军基本方式                         |
+| 作风优良               | 我军鲜明特色和政治优势                   |
+
+58a.军民融合深度发展格局：
+
+1. 全要素
+2. 宽领域
+3. 高效益
 
 59.强军目标十二字：**听党指挥、能打胜战、作风优良**，是加强军队建设的**聚焦点和着力点**。
 
@@ -1955,9 +2141,22 @@
 3. 国际社会坚持一个中国原则的格局得到极大巩固和发展
 4. 世界和平与发展的力量得到空前壮大。
 
+63a.中国外交政策的演变：
+
+1. 建国初期：①另起炉灶②打扫干净屋子再请客③一边倒
+2. 60年代：两个拳头出击
+3. 70年代：一条线
+4. 至今：独立自主和平外交
+
+63b.
+
+* **独立自主**是中华民族的**精神之魂**，是我们立国立党的重要原则；
+
+* 独立自主，自力更生是我国社会经济发展的根本立足点（根本基点）。
+
 64.我国始终将周边置于外交全局的首要位置，秉持的**周边外交理念**是：**亲诚惠容**
 
-65.我国对外工作的**出发点和落脚点**：**维护国家主权、安全、发展利益**。（除这个外，大部分出发点和落脚点都和人民有关）
+65.我国对外工作的**出发点和落脚点**：**维护国家主权、安全、发展利益**。（除这个外，大部分出发点和落脚点都和**人民**有关）
 
 058.新时代**对外工作**的**总目标**：**推动构建人类命运共同体**，也是当代中国共产党人回答和解决关乎人类前途命运的时代之问的**中国方案**。
 
@@ -1995,7 +2194,7 @@
 
 69.发挥党的**政治建设**的**统领性作用**，必须把准政治方向、站稳政治立场、营造良好政治生态、提高政治能力。
 
-70.**加强纪律建设**是**全面从严治党**的**治本之策**。
+70.**加强纪律建设**是**全面从严治党**的**治本之策**。纪律严明是加强和规范党内政治生活的**内在要求**和**重要保证**。
 
 71.**思想建设**是**党的基础性建设**。
 
@@ -2005,7 +2204,7 @@
 
 73.**最彻底**的**自我革命**：**反腐败**
 
-73a.在深入推进党的自我革命实践中需要把握好九个问题，即：
+73a.在深入**推进党的自我革命实践**中需要把握好九个问题，（“九个以”）即：
 
 1. 以坚持党中央集中统一领导为根本保证
 2. 以**引领伟大社会革命**为**根本目的**
@@ -2112,7 +2311,9 @@
 
 11.**近代教育**开始于**洋务运动**。
 
-12.近代中国资产阶级思想与封建主义思想的**第一次正面交锋**是：**维新派与守旧派的论战**，论战焦点是**要不要改良（变法、兴民权、设议院、实行君主立宪制，不要不要废八股、改科举和兴西学）**。第二次交锋是**革命派与改良派之间的论战**，论战焦点是**要不要以革命手段推翻清王朝**。
+12.近代中国资产阶级思想与封建主义思想的**第一次正面交锋**是：**维新派与守旧派的论战**，论战焦点是**要不要改良（变法、兴民权、设议院、实行君主立宪制，不要不要废八股、改科举和兴西学）**。第二次交锋是**革命派与改良派之间的论战**，论战焦点是**要不要进行社会革命，要不要以革命手段推翻清王朝**。
+
+12a.维新派和洋务派分歧的实质是**要不要学习西方的政治制度和思想文化**。
 
 13.维新派认为**兴民权、设议院，实行君主立宪制度**才是当时中国理想的政治方案。
 
@@ -2200,10 +2401,32 @@
 
 011.革命派思想理论方面的弱点：
 
-* 反对贫苦农民“夺富人之田为己有”**
+* 反对贫苦农民“夺富人之田为己有”
 * **没有正面鲜明地**提出反对帝国主义的主张
 
 012.**中国共产党一经诞生**，就把为中国人民谋幸福、为中华民族谋复兴确立为自己的初心和使命，**点亮了实现中华民族伟大复兴的灯塔**。
+
+012a.为人民谋幸福，为民族谋复兴：
+
+1. 是我们党的**初心与使命**
+2. 是党领导现代化建设的**出发点和落脚点**
+3. 是新发展理念的“**根”和“魂”**
+
+012b.党的百年奋斗：
+
+1. 改变了中国人民的前途命运
+2. 开辟了实现中华民族伟大复兴的正确道路
+3. 展示了马克思主义的强大生命力
+4. 深刻影响了世界历史的进程
+5. 锻造了走在时代前列的中国共产党
+
+中国共产党百年奋斗历史意义的五个方面概括，**贯通**了中国共产党百年奋斗的**历史逻辑、理论逻辑、实践逻辑**
+
+012c.中国共产党、中国政府**三大历史任务**：
+
+1. 祖国统一
+2. 社会主义现代化
+3. 世界和平
 
 013.辛亥革命失败后，资产阶级革命派为挽救共和制度而进行的斗争主要有：（保路运动发生在辛亥革命前）
 
@@ -2221,6 +2444,8 @@
 ### 第四章 中国共产党成立和中国革命新局面
 
 21.新文化运动的倡导者**批判孔学**，是**为了给中国发展资本主义扫清障碍**。（注意：**五四运动**促进了马克思主义在中国的传播及其同中国工人运动的结合）
+
+21a.新文化运动的倡导者以**进化论观点**和**个性解放思想**为主要武器，猛烈抨击以孔子为代表的“往圣先贤”。
 
 22.**五四运动**是中国革命的新阶段即**新民主主义革命阶段**的**开端**，发生在新文化运动之后。
 
@@ -2262,6 +2487,14 @@
 38.1922年1月**香港海员罢工**到1923年2月**京汉铁路工人罢工**，掀起了**中国工人运动的第一个高潮**。
 
 39.大革命失败，主要指**反帝反封建的革命任务没有完成**。
+
+39a.大革命失败的历史意义：
+
+大革命虽然失败了，但它的历史意义仍然是不可磨灭的。正是在这个时期，中国共产党人进行了轰轰烈烈的革命工作，领导了全国反帝反封建的伟大斗争，在中国革命史上写下了光荣的一页，
+
+1. 同时**开始探索马克思主义中国化的途径**
+2. **初步提出了新民主主义革命的基本思想**
+3. 并从大革命的失败中汲取深刻历史教训，开始**懂得进行土地革命和掌握革命武装的重要性**。
 
 015.**1915年**兴起的初期**新文化运动的基本内容**：
 
@@ -2370,7 +2603,7 @@
 | 抗日战争时期                               | 1935年8月1日  《为抗日救国告全体同胞书》即**八一宣言**，呼吁全国各族各界同胞、各军队团结起来，停止内战，一致抗日；<br />《新民主主义论》新民主主义理论的系统阐明，标志着毛泽东思想达到成熟；<br />《论持久战》——兵民是胜利之本   <br />1939年10月《〈共产党人〉发刊词》——把**党成立以来的历史经验概括为三大法宝**<br />《中国革命和中国共产党》第一次提出了新民主主义革命的科学概念 |
 | 延安整风运动（1942年2月）                  | 《改造我们的学习》-学风(党的高级干部) <br />《整顿党的作风》-党风(全党党员)<br />《反对党八股》-文风(全党党员)   <br />**延安整风运动**，对待犯错误同志的正确方针：**惩前毖后、治病救人**<br />**一切从实际出发（前提）、理论联系实际（途径和方法）、实事求是(实质、核心)、在实践中检验的和发展真理(验证条件、目的)**的==思想路线==**在全党范围确立起来**。 |
 | 新中国成立                                 | 《论人民民主专政》总结：<br />1.我们是工人阶级领导的，以工农联盟为基础的人民民主专政。我们还必须利用一切有利而不是有害城乡资本主义因素，团结民族资产阶级。<br />2.民族资产阶级不能充当革命的领导者，也不应该在国家政权中占主要地位。<br />3.奠定了新中国国家政权的理论基础和一定发展阶段上的政策基础<br />4.为即将成立的新中国作了政治理论准备<br />5.与中共七届二中全会的聚义一起构成了《中国人民政治协商会议共同纲领》的基础 |
-| 探索社会主义道路阶段                       | 1956年《论十大关系》基本**方针**——调动国内外一切积极因素为社会主义服务，是马义中国化**第二次结合**的标志，也是中国共产党人**开始探索社会主义道路的标志**（《论十大关系》标志着**党探索中国社会主义建设道路的良好开端**。）。<br />《关于正确处理人民内部矛盾的问题》——仍然存在敌我矛盾、人民内部矛盾，正确处理人民内部矛盾是国家政治的主题<br />《一九五七年夏季的形势》——**六又政治局面**<br />《在晋绥干部会议上的讲话》1948年，**完整阐述了总路线的内容** |
+| 探索社会主义道路阶段                       | 1956年《论十大关系》基本**方针**——调动国内外一切积极因素为社会主义服务，是马义中国化**第二次结合**的标志，也是中国共产党人**开始探索社会主义道路的标志**（《论十大关系》明确了社会主义的**根本思想**是**根据本国情况走自己的路**，标志着**党探索中国社会主义建设道路的良好开端**。）。<br />《关于正确处理人民内部矛盾的问题》——仍然存在敌我矛盾、人民内部矛盾，正确处理人民内部矛盾是国家政治的主题<br />《一九五七年夏季的形势》——**六又政治局面**<br />《在晋绥干部会议上的讲话》1948年，**完整阐述了总路线的内容** |
 | 改革开放时期                               | 邓小平**《解放思想、实事求是、团结一致向前看》**——是党的十一届三中全会的**主题报告**，是解放思想、开辟新时期新道路、开创中国特色社会主义新理论的**宣言书**(**第二个宣言书**是**南方谈话**，是把改革开放和现代化建设推向新阶段的又一个解放思想、实事求是的宣言书) |
 
 026.井冈山根据地的建立：
@@ -2380,6 +2613,8 @@
 3. 为中国革命开辟出了农村包围城市、武装夺取政权这样一条前人没有走过的道路
 
 027.**农村包围城市、武装夺取政权的理论**，是在以**毛泽东为主要代表的中国共产党人同当时党内盛行的把马克思主义教条化、把共产国际决议和苏联经验神圣化的错误倾向作坚决斗争的基础上逐步形成的。**
+
+027a.1949年3月25日，毛泽东等中央领导人与中央机关、人民**解放军总部进驻北平（北京）香山**，**标志**着中国**革命重心从农村转向城市**。
 
 028.土地革命中的阶级路线：
 
@@ -2478,7 +2713,7 @@
 
 65.中国的民主党派是**阶级联盟性质的政党**。
 
-66.中国各民主党派从成立起，大多同中国共产党建立了不同程度的合作关系，并在斗争实践中逐步发展了这种关系，这是由于各民族党派的政纲不尽相同，但都主张爱国、反对卖国，主张民主，反对独裁。在这些方面，**中国共产党的新民主主义革命政纲基本上一致**。
+66.中国各民主党派从成立起，大多同中国共产党建立了不同程度的合作关系，并在斗争实践中逐步发展了这种关系，这是由于**各民族党派的政纲不尽相同**，但都主张爱国、反对卖国，主张民主，反对独裁。**在这些方面，中国共产党的新民主主义革命政纲基本上一致**。
 
 67.1948年4月30日，中共中央在纪念**五一国际劳动节的口号**中提出：“各民主党派、各人民团体、各社会贤达**迅速召开政治协商会议**，讨论并实现**召集人民代表大会**，**成立民主联合政府**。”**揭开了中国共产党同各党派、各团体、各族各界人士协商建国的序幕，奠定了中共产党领导的多党合作和政治协商制度的基础。**
 
@@ -2507,8 +2742,8 @@
 
 035.解放战争的三个阶段：
 
-1. 战略防御（1946年6月至1947年6月）
-2. 战略反攻（1947年7月至1948年9月）
+1. 战略防御（1946年6月至1947年6月）（防御阶段战争主要在解放区进行）
+2. 战略反攻（1947年7月至1948年9月）（以**主力打到外线去**，将战争引向国民党统治区域。）
 3. 战略决战（1948年9月至1949年12月）
 
 036.揭开**战略进攻序幕**的是：
@@ -2615,28 +2850,28 @@
 | 古田会议                           | 1929年                      | 1.会议确立了**思想建党、政治建军的原则**，规定红军是一个执行革命的**政治任务**的武装集团，必须绝对服从共产党的领导，必须担负打仗、筹款和做群众工作的任务，必须加强政治工作<br />2.加强**思想建设**入手，保持党的无产阶级先锋队性质和建设党领导的新型人民军队的问题，这是人民军队完全有别于一切旧军队的政治特质和根本优势。<br />3.创造性解决了在农村环境中，在党组织和军队以农民为主要成分的条件下：①**如何保持党的无产阶级先锋队性质的重大问题**②**如何建设党领导的新型人民军队的重大问题** |
 | 中华苏维埃第一次全国工农兵代表大会 | 1931年                      | 土地革命时期，在江西瑞金召开；通过了《中华苏维埃共和国宪法大纲》以及土地法令、劳动法等文件；选举产生了中华苏维埃共和国中央执行委员会；成立了**中华苏维埃共和国临时中央政府**，毛泽东当选为主席；实施**工农兵代表大会制度**；(换言之，第一次国共合作共产党既没有政权、也没有军队) |
 | 遵义会议                           | 1935年                      | 解决了**军事问题和组织问题**；**政治问题(瓦窑堡会议)** **思想问题(延安整风运动，确立了实事求是的思想路线)**生死攸关的转折点（三个生死攸关的转折点：八七会议、遵义会议和十一届三中全会）<br />事实上**确立了毛泽东在党中央和红军的领导地位**，开始**形成以毛泽东同志为核心的党的第一代中央领导集体。<br />开启了党独立自主解决中国革命实际问题的新阶段。<br />标志着中国共产党在政治上**开始走向成熟**；遵义会议的鲜明特点：**坚持真理、修正错误** |
-| 瓦窑堡会议                         | 1935年陕北                  | **建立抗日民族统一战线**<br />1.阐明建立抗日民族统一战线的可能性（**抗日民族统一战线策略总方针：发展进步势力，争取中间势力，孤立顽固势力**）<br />2.**批判了“左”倾关门主义错误**，强调共产党在抗日民族统一战线中的领导作用（对顽固势力，既联合又斗争；原则：有理有利有节）<br />3.规定了建立广泛抗日民族统一战线的具体政策，决定以“人民共和国”代替“工农共和国” |
-| 洛川会议                           | 1937年                      | 强调要打倒日本帝国主义，关键在于使已经发动的抗战成为**全面的全民族的抗战(全面抗战路线)**，以及**抗日救国十大纲领(抗日纲领)：必须实行全国军事的总动员、全国人民的总动员** |
+| 瓦窑堡会议                         | 1935年陕北                  | **党的基本策略任务：建立（广泛的）抗日民族统一战线**<br />1.阐明建立抗日民族统一战线的可能性（**抗日民族统一战线策略总方针：发展进步势力，争取中间势力，孤立顽固势力**）<br />2.**批判了“左”倾关门主义错误**，强调共产党在抗日民族统一战线中的领导作用（对顽固势力，既联合又斗争；原则：有理有利有节）<br />3.规定了建立广泛抗日民族统一战线的具体政策，决定以“人民共和国”代替“工农共和国” |
+| 洛川会议                           | 1937年                      | 强调要打倒日本帝国主义，关键在于使已经发动的抗战成为**全面的全民族的抗战(全面抗战路线)**，以及**抗日救国十大纲领(抗日纲领)：必须实行全国军事的总动员、全国人民的总动员**<br />1.会议制定的党的**全面抗战路线**（抗日民族统一战线是瓦窑堡会议确立）<br />2.把实行全民族抗战与争取人民民主、改善人民生活结合起来<br />3.把反对外敌入侵与推进社会进步统一起来，**正确处理了民族矛盾与阶级矛盾的关系**。 |
 | 六届六中全会                       | 1938年9月29日至11月6日-延安 | 毛泽东  (《论新阶段》)**首次提出马克思主义中国化** <br />中共七大 (毛泽东)完成了**第一次结合的历史性飞跃**。 (新民主主义革命理论系统阐明，标志着毛泽东主义的成熟)<br />**1956年**  毛泽东提出**马克思主义中国化第二次结合**的任务《论十大关系》中提出                                        邓小平改革开放后完成了第二次结合的历史性飞跃，即中国特色社会主义理论成果<br />进一步**巩固了毛泽东在全党的领导地位，统一了全党的思想和步调**，推动各项工作迅速发展。<br />期间文章：《<共产党人>发刊词》——把**党成立以来的历史经验概括为三大法宝**。《中国革命和中国共产党》《新民主主义论》；**革命道路理论确立于《战争与战略问题》** |
 | 中共七大                           | 1945年4月23日-延安          | 1.制定了**党的政治路线和新民主主义国家在政治、经济、文化方面的纲领**<br />2.标志着我们**党在政治上、思想上、组织上走向了成熟**（不要套到《决议》或者十一届三中全会上去）<br />3.把**毛泽东思想确立为党的指导思想并写入党章**，规定**毛泽东思想为党一切工作的指针**，形成了一支**高举毛泽东旗帜的久经考验的政治家集团**。<br />4.总结党的建设的历史经验，把党在长期奋斗中形成的优良作风概括为**理论和实践相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风**。 |
 | 重庆政治协商会议                   | 1946年                      | 五项协定  1.政府组织 2.国民大会 3.和平建国纲领 4.宪法草案 5.军事问题 |
-| 七届二中全会(西柏坡会议)           | 1949年                      | 1.提出迅速夺取全国胜利的方针：天津式、北平式、绥远式<br />2.党的**工作重心必须由乡村转移到城市**<br />3.指出了中国**由农业国转变为工业国，由新民主主义社会转变为社会主义社会**的总任务和主要途径<br /><br />4.规定了党在全国胜利后，在政治、经济、外交方面应当采取的基本政策。<br />5.提出**“两个务必”**，务必使同志们继续保持**谦虚、谨慎、不骄、不躁**的作风，务必使同志保持**艰苦奋斗**的作风<br />6.1950年6月的七届三中全会制定的党在新中国成立初期的战略策略方针——**“不要四面出击”** |
+| 七届二中全会(西柏坡会议)           | 1949年                      | 1.提出迅速夺取全国胜利的方针：天津式、北平式、绥远式<br />2.党的**工作重心必须由乡村转移到城市**<br />3.指出了中国**由农业国转变为工业国，由新民主主义社会转变为社会主义社会**的总任务和主要途径<br /><br />4.规定了党在全国胜利后，在政治、经济、外交方面应当采取的基本政策。<br />5.提出**“两个务必”**，务必使同志们继续保持**谦虚、谨慎、不骄、不躁**的作风，务必使同志保持**艰苦奋斗**的作风<br />6.1950年6月的**七届三中全会**制定的党在新中国成立初期的战略策略方针——**“不要四面出击”** |
 | 第一届人民政协会议                 | 1949年9月21日-北京          | 1.完成了**创建新中国的任务**<br />2.通过了《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议**共同纲领**》（不是**社会主义类型**的宪法）<br />3.开启了中共产党领导各党派团体和各族各界人士协商建国、共创伟业的新纪元<br />4.标志着**中国共产党领导的多党合作和政治协商制度正式确立** |
-| 中共八大                           | 1956年                      | 1.主要矛盾改变，“人民对于经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾”、“人民对于建立先进的工业国的要求同落后的农业国的现实之间的矛盾”，明确提出新形势下党和人民的基本（主要）任务——在新生产关系下保护和发展生产力；<br />2.陈云提出——三个主体、三个补充；这是理论上突破苏联计划经济模式，探索经济体制改革的**重要尝试（十一届三中全会是真正突破计划经济模式）** <br />3.提出经济建设方针，既**反保守又反冒进即在综合平衡中稳步前进**； |
+| 中共八大                           | 1956年                      | 1.主要矛盾改变，“人民对于经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾”、“人民对于建立先进的工业国的要求同落后的农业国的现实之间的矛盾”<br />2.明确提出新形势下党和人民的**基本（主要）任务**——**在新生产关系下保护和发展生产力**；<br />3.陈云提出——三个主体、三个补充；这是理论上突破苏联计划经济模式，探索经济体制改革的**重要尝试（十一届三中全会是真正突破计划经济模式）** <br />4.提出经济建设方针，既**反保守又反冒进即在综合平衡中稳步前进**； |
 | 中共八届九中全会                   | 1961年1月                   | 决定国民经济实行的**方针是“调整、巩固、充实、提高”**         |
 | 十一届三中全会                     | 1978年12月18日-22日         | 1.高度评价了关于**真理标准问题的讨论**；<br />2.重新确立马克思主义的**思想路线、政治路线、组织路线**；<br />3.揭开了社会主义改革开放的序幕，中国**进入了改革开放和社会主义现代化建设的历史新时期（停止使用“以阶级斗争为纲”口号，把工作重心转移到<u>社会主义现代化建设</u>上来）**；<br />4.实现了**新中国成立以来党的历史上具有深远意义的伟大转折**；<br />5.1979年11月，邓小平对《决议》提出了指导原则，最**核心**一条是**确立毛泽东同志的历史地位，坚持和发展毛泽东思想**；<br />6.开启了**改革开放和社会主义现代化建设新时期**； |
 | 十一届六中全会                     | 1981年                      | **第一次明确地提出了"我国的社会主义制度还处于初级阶段**。科学的评价的毛泽东同志和毛泽东思想，提出了毛泽东思想活的灵魂是三个方面；通过了《关于建国以来党的若干历史问题的**决议》**，**标志着党在指导思想上拨乱反正的胜利完成**。 |
 | 中共十二大                         |                             | 1.**坚持和发展中国特色社会主义成为（改革开放以来）我们党全部理论和实践创新的主题**（也是习近平新时代中国特色社会主义思想的**核心要义**）<br />2.邓小平在十二大明确提出**“建设有中国特色社会主义”这一具有里程碑意义的重大命题**（邓小平理论主题形成） |
-| 中共十三大                         | 1987年10月25日              | **把“社会主义初阶阶段”作为事关全局的国情加以把握，第一次对社会主义初级阶段理论做了系统的论述**，并提出了社会主义初级阶段的一个中心两个基本点的基本路线，我们党对中特理论进行系统概括，标志着**邓小平理论轮廓的形成** |
+| 中共十三大                         | 1987年10月25日              | **把“社会主义初阶阶段”作为事关全局的国情加以把握，第一次对社会主义初级阶段理论做了系统的论述**，并提出了社会主义初级阶段的一个中心两个基本点的基本路线，我们党对中特理论进行系统概括，标志着**邓小平理论轮廓的形成**<br />一个中心，两个基本点：<br />1.“一个中心，两个基本点”是基本路线最主要的内容，是实现社会主义现代化奋斗目标的**基本途径**<br />2.“以经济建设为中心”回答了社会主义的根本任务问题，体现了**发展生产力**的**本质要求**；<br />3.“坚持四项基本原则”回答了解放和发展生产力的政治保证问题，体现了社会主义**基本制度要求**<br />4.“坚持改革开放”回答了社会主义的发展动力和外部条件问题，体现了**解放生产力的本质要求** |
 | 南方谈话                           | 1992年1月                   | 1.**计划和市场都是手段** <br />2.阐明了**社会主义本质** <br />3.提出了**“发展才是硬道理的重要论断”**<br />4.提出改革开放和各项工作成败得失的“三个有利于”标准 <br />5.强调加强党的建设 <br />6.关于社会主义初级阶段的长期性和前途<br />**邓小平理论走向成熟**；“**社会主义的本质是解放生产力，发展生产力，消灭剥削，消灭两极分化**” |
 | 中共十四大                         | 1992年10月                  | 提出了我国**经济体制改革的目标**是**建立社会主义市场经济体制**(确定了我国社会主义市场经济的改革目标)，提出“**要使市场在社会主义国家宏观调控下对资源配置起==基础性==作用**” |
 | 中共十五大                         | 1997年9月                   | 1.**邓小平理论**同马克思列宁主义毛泽东思想一起，**确立为指导思想写入党章**。<br />2.大会**提出党在社会主义初级阶段的基本纲领**。<br />3.第一次明确提出，**公有制为主体、多种所有制经济共同发展，是我国社会主义初级阶段的基本经济制度，非公有制经济是我国社会主义市场经济的重要组成部分。** |
 | 中共十六大                         | 2002年                      | 全面建设小康社会的奋斗目标                                   |
 | 中共十七大                         |                             | **中特理论体系**                                             |
-| 中共十八大                         | 2012年                      | 1.改为“**市场在社会主义国家宏观调控下对资源配置起==决定性==作用**”；<br />2.**新发展理念**是**最重要、最主要**的。<br />3.中共十八大的召开，标志着**中国已经进入全面建成小康社会的决定性阶段**，**开启了中国特色社会主义新时代**。<br />4.主要任务是：实现第一个百年奋斗目标、开启实现第二个百年奋斗目标新征程、朝着实现中华民族伟大复兴的宏伟目标继续前进。<br />5.报告创造性地提出“24个字”——“富强、民主、文明、和谐,自由、平等、公正、法治,爱国、敬业、诚信、友善” |
-| 中共十九大                         | 2017年10月18日24日-北京     | 1.党的十九大报告提出**新时代党的建设总要求**，提出把党的**政治建设摆在首位**，以**政治建设为统领**深入推进党的建设<br />2.我国的主要矛盾变为“**人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾**” |
+| 中共十八大                         | 2012年                      | 1.改为“**市场在社会主义国家宏观调控下对资源配置起==决定性==作用**”；<br />2.**新发展理念**是**最重要、最主要**的。<br />3.中共十八大的召开，标志着**中国已经进入全面建成小康社会的决定性阶段**，**开启了中国特色社会主义新时代**。<br />4.主要任务是：实现第一个百年奋斗目标、开启实现第二个百年奋斗目标新征程、朝着实现中华民族伟大复兴的宏伟目标继续前进。<br />5.报告创造性地提出“24个字”——“富强、民主、文明、和谐,自由、平等、公正、法治,爱国、敬业、诚信、友善”<br />6.形成了新时代政治建军方略，明确**政治建军**是**人民军队立军之本**。 |
+| 中共十九大                         | 2017年10月18日24日-北京     | 1.党的十九大报告提出**新时代党的建设总要求**，提出把党的**政治建设摆在首位**，以**政治建设为统领**深入推进党的建设<br />2.我国的主要矛盾变为“**人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾**”<br />3.“四个伟大”。伟大梦想是目标，指引前进方向；伟大斗争是手段，激发前进动力；伟大工程是保障，提供前进保证（决定性作用）；伟大事业是主题，开辟前进道路 |
 | 十九届四中全会                     |                             | 指出**社会主义基本经济制度**：“**公有制为主体，多种所有制经济共同发展，按劳分配为主体，多种分配方式并存，社会主义市场经济体制等**” |
-| 十九届五中全会                     |                             | 进入新发展阶段，完整、准确、全面贯彻新发展理念，必须更加注重**共同富裕**问题；全会**最重要成果**是审议通过了《中共中央关于党的百年奋斗成就和历史经验的决议》，对习近平新时代中国特色社会主义思想的概括阐述，是《决议》的一个**突出亮点**，也是一个**重大贡献**； |
+| 十九届五中全会                     |                             | 进入新发展阶段，完整、准确、全面贯彻新发展理念，必须更加注重**共同富裕**问题；全会**最重要成果**是审议通过了《中共中央关于党的百年奋斗成就和历史经验的决议》，对习近平新时代中国特色社会主义思想的概括阐述，是《决议》的一个**突出亮点**，也是一个**重大贡献**；<br />我国进入新发展阶段的理论依据、历史依据与现实依据：<br />1.理论依据：人类社会必然走向共产主义，但实现这一崇高目标必然经历若干历史阶段，发展社会主义不仅是个长期的历史过程，而且是需要划分为不同历史阶段的过程<br />2.历史依据：新发展阶段是我们党带领人民迎来从站起来、富起来到强起来的历史性跨越的新阶段<br />3.现实依据：我们已经拥有开启新征程、实现新的更高目标的雄厚物质基础 |
 | 中共二十大                         | 2022年10月16日-22日-北京    | 报告指出，从现在起，中国共产党的中心任务是：①团结带领全国各族人民全面建成社会主义现代化强国、实现第二个百年奋斗目标②以中国式现代化全面推进中华民族伟大复兴 |
 | 二十届三中全会                     | 2024年7月15日至18日-北京    | **最重要成果**：《中共中央关于进一步全面深化改革 推进中国式现代化的决定》 |
 
@@ -2683,7 +2918,9 @@
 
 ### 绪论 当担复兴大任 成就时代新人
 
-1.**法治**发挥作用要以**国家强制力为后盾**，是治国理政的**基本方式**；**德治**发挥作用要通过人们的内心信念、传统习俗、社会舆论等进行道德教化，并对违反道德的行为进行道德谴责，是治国理政的**重要方式**。
+1.**法治**发挥作用要以**国家强制力为后盾**，是治国理政的**基本方式**；
+
+**德治**发挥作用要通过人们的内心信念、传统习俗、社会舆论等进行道德教化，并对违反道德的行为进行道德谴责，是治国理政的**重要方式**。
 
 01.既属于道德规范，又是法律规范的是：
 
@@ -2741,6 +2978,13 @@
 2. 人民性
 3. 真实性
 
+社会主义核心价值观：
+
+1. 体现社会主义的**本质属性**
+2. 扎根中华优秀传统文化土壤
+3. **吸纳世界文明有益成果**
+4. **人民性**是社会主义核心价值观的**根本特性**
+
 06.社会理想是个人理想的**汇聚和升华（不是叠加）**。
 
 07.**个人理想的实现**以**社会理想的实现为前提和基础**。
@@ -2788,11 +3032,13 @@
 
 013.**社会主义核心价值观**把涉及**国家、社会、公民的价值要求融为一体**。
 
-014.世界观决定人生观，人生观决定价值观,价值观决定方法论。
+014.**世界观决定人生观，人生观决定价值观**，价值观决定方法论。
 
 ### 第五章 遵守道德规范 锤炼道德品格
 
 13.**劳动**创造了人和人类社会，是**道德起源**的**第一个历史前提**。
+
+13a.“情感欲望论”认为道德起源于人们的**情感欲望**，是人们为实现情感欲望而形成的行为要求；“动物本能论”则认为道德观念是**动物本能的延续**，进而把动物基于本能的活动与人类有目的、有意识的活动画上等号。可以说，在马克思主义产生之前，这些关于道德起源的观点，要么是主观唯心主义或客观唯心主义的注解，要么是旧唯物主义形而上学的分析，均无法正确揭示道德的起源。
 
 14.**道德的产生、发展和变化**，归根结底源于社会**经济关系**。
 
@@ -2818,7 +3064,11 @@
 
 21.中国**革命道德的灵魂**：**坚持社会主义和共产主义理想信念**
 
+21a.革命的**根本问题**是**国家政权问题**
+
 22.贯穿中国革命道德始终的**一根红线**：**全心全意为人民服务**
+
+22a.始终把革命利益放在首位；树立社会新风，建立新型人际；修身自律，保持节操是**革命的重要内容**
 
 23.家庭美德主要内容包括：尊老爱幼、男女平等、夫妻和睦、勤俭持家、**邻里互助**。
 
@@ -2906,6 +3156,13 @@
 
 30.中国特色社会主义法治道路**本质**上是：**中国特色社会主义道路在法治领域的具体体现**
 
+30a.我国社会主义法律：
+
+1. 从法律体现的意志看，体现了党的主张和人民意志的统一，是**阶级性与人民性**的统一。
+2. 从法律的实质内容来看，我国社会主义法律具有**科学性和先进性**。
+3. 从法律的社会作用看，我国社会主义法律是中国特色社会主义建设的**重要保障**。
+4. 由于历史等原因，**我国的法律体系还不如发达国家成熟**。
+
 31.**党的领导**是中国特色社会主义**法治之魂**，是我们的法治同西方资本主义国家的法治**最大的区别**。宪法的**最显著特征**：确认了中国共产党的领导地位。
 
 32.**社会主义法律和社会主义道德在性质、作用和目标上的一致性**，决定了建设中国特色社会主义法治国家，必须一手抓法治、一手抓德治，**坚持依法治国和以德治国相结合**。
@@ -2916,15 +3173,27 @@
 
 1. 完备的法律规范体系（是**前提**，是法治国家、法治政府，法治社会的**制度基础**）
 2. 高效的法治实施体系（**重点**）
-3. 严密的法治监督体系（**重要保障**）
+3. 严密的法治监督体系（**重要保障、迫切要求**）
 4. 有力的法治保障体系（**重要依托**）
 5. 完善的党内法规体系（**本质要求**和重要内容）
 
+34a.完善中国特色社会主义法治体系，对于进一步全面深化改革、推进中国式现代化具有重大而深远的意义。
+
+1. 完善中国特色社会主义法治体系，是坚持和发展中国特色社会主义的**内在要求**。
+2. 完善中国特色社会主义法治体系，是在法治轨道上全面建设社会主义现代化国家的**重要任务**。
+3. 完善中国特色社会主义法治体系，是全面推进依法治国的**总抓手**。
+
+34b.建设中国特色社会主义法治体系：
+
+1. 是中国特色社会主义的**本质要求**和**重要保障**
+2. 是推进国家治理体系和治理能力现代化的**重要举措**
+3. 是全面依法治国的**总抓手**
+
 35.坚持法治国家、法治政府、法治社会相辅相成，一体建设：
 
-1. 法治国家是法治建设的**目标**；
-2. 法治政府是建设法治国家的**重点**（重点任务与主体工程）；
-3. 法治社会是构筑法治国家的**基础**；
+1. **法治国家**是法治建设的**目标**；
+2. **法治政府**是建设法治国家的**重点**（重点任务与主体工程）；
+3. **法治社会**是**构筑法治国家**的**基础**；
 
 36.坚持全面推进科学立法、严格执法、公正司法、全民守法
 
@@ -2953,6 +3222,12 @@
 2. **机会公平**：①起点平等②发展平等③**代际平等**
 3. **规则公平**：
 4. **救济公平**：
+
+38a.公平正义是：
+
+1. 是**司法的灵魂**和**法治生命线**
+2. 法治思维的基本内容之一
+3. 社会主义法治的价值追求
 
 39.**权利保障**的具体内容：
 
@@ -2984,7 +3259,7 @@
 
 45.享有**生命权**，是人享有其他权利的前提。
 
-022.“十一个坚持”中，科学指明了中国特色社会主义法治的前进方向的是：
+022.“十一个坚持”中，科学指明了中国特色社会主义法治的**前进方向**的是（下面三者共同决定前进方向）：
 
 1. 坚持党对全面依法治国的领导（谁领导）
 2. 坚持以人民为中心（依靠谁）
@@ -2996,14 +3271,21 @@
 2. 立足我国基本国情的必然选择
 3. **历史的必然结论**
 
-024.**习近平法治思想**是新时代**全面依法治国的指导思想和根本遵循**。
+024.**习近平（新时代中国特色社会主义）法治思想**是：
 
-025.平等是：
+1. 新时代**全面依法治国的指导思想和根本遵循**。
+2. 坚持和发展中国特色社会主义的**根本指引**
+3. 把党建设成为中国特色社会主义事业领导核心的**强大思想武器**
+4. 是马克思主义法治理论中国化的最新成果
+5. 是顺应实现中华民族伟大复兴时代要求应运而生的重大理论创新成果
+6. 深刻回答了新时代为什么实行全面依法治国、怎样实行全面依法治国等一系列重大问题
+
+025.**平等**是：
 
 1. 社会主义法律的**基本属性**
 2. 社会主义法治的**基本要求**
 
-026.**党的领导**是社会主义法治的最根本的保证，**人民**是依法治国的**主体和力量源泉**。
+026.**党的领导**是社会主义法治的最根本的**保证**，**人民**是依法治国的**主体和力量源泉**。
 
 026a.统一战线是党领导的统一战线。党的领导是**统一战线最鲜明的特征**，坚持党的领导是统一战线**最核心最根本的问题**。加强新时代统一战线工作，根本在于坚持党的领导。党对统一战线的领导主要是政治领导，即政治原则、政治方向、重大方针政策的领导，主要体现为**党委领导而不是部门领导**、**集体领导而不是个人领导**。
 
@@ -3028,6 +3310,13 @@
 2. 全局性
 3. 稳定性
 4. 长期性
+
+031a.宪法的力量不仅因其地位崇高，更源于其有效的监督。宪法实施以来，我国不断探索并逐步建立了具有中国特色的宪法监督制度。在新的历史条件下，推进全面依法治国、加强宪法实施，对宪法监督提出了新的更高要求。要健全：
+
+1. 人大工作机制
+2. 宪法解释机制
+3. 备案审查机制
+4. 合宪性审查机制
 
 032.**权利的法律保障**包括：
 
@@ -3103,10 +3392,22 @@
 2. 自力更生、艰苦奋斗
 3. 大力协同、勇于登攀
 
-新时代北斗精神：
+新时代**北斗精神**：
 
 1. 自主创新、开放融合
 2. 万众一心、追求卓越
+
+**探月精神**：
+
+1. 追逐梦想、勇于探索
+2. 协同攻坚、合作共赢
+
+**载人航天精神**：
+
+1. 特别能吃苦
+2. 特别能战斗
+3. 特别能攻关
+4. 特别能奉献
 
 8.习近平总书记在接见第33届夏季奥运会中国体育代表团全体成员时指出，中国体育代表团的优异成绩，将中华体育精神和奥林匹克精神发扬光大。中国体育健儿的表现让全世界看到了：
 
@@ -3172,11 +3473,22 @@
 2. 二是**以稳为重**，不折腾、不挑事、不越界，保持中美关系总体稳定。
 3. 三是**以信为本**，用行动兑现各自承诺，将“旧金山愿景”转为“实景”。
 
+当地时间2024年11月16日下午，国家主席习近平在利马会见美国总统拜登。习近平指出，美国刚刚举行了大选。（下面四个没有变）
+
+1. 中方致力于中美关系稳定、健康、可持续发展的目标没有变
+2. 按照相互尊重、和平共处、合作共赢处理中美关系的原则没有变
+3. 坚定维护自身主权、安全、发展利益的立场没有变，赓续中美人民传统友谊的愿望没有变
+4. 中方愿同美国政府继续保持对话、拓展合作、管控分歧，努力实现中美关系平稳过渡，造福两国人民。
+
+还要注意“4条红线”：习近平强调，不能挑战红线、底线。**台湾问题、民主人权、道路制度、发展权利**是中方的**4条红线**，不容挑战。这些是中美关系最重要的防护栏和安全网。
+
 16.国家主席习近平在同法国总统马克龙会谈时指出，在当前世界百年变局下，中法双方应该坚守**独立自主、相互理解、高瞻远瞩、互利共赢**的建交初心，并为其注入新的时代内涵，打造新时期**互信稳定、守正创新、担当作为**的**中法关系**。这对于中法关系保持高水平发展具有重要指导意义。
 
 17.2024年5月6日晚，国家主席习近平和夫人彭丽媛在巴黎爱丽舍宫出席法国总统马克龙和夫人布丽吉特举行的欢迎宴会。习近平指出，中法是特殊的朋友，中法关系是世界大国关系中**一对特殊的关系**：特殊在**独立自主**；特殊在**相互理解**；特殊在**责任担当**。
 
 18.**坚持相互尊重、坚持独立自主、妥善管控分歧**是**增强中欧关系稳定性**的要求。
+
+18a.中欧合作的**本质**是**优势互补、互利共赢**。
 
 19.中国的产能不是天上掉下来的，是客观因素和主观努力共同作用的结果，符合基本经济理论和主要发达经济体发展规律。
 
@@ -3198,7 +3510,14 @@
 3. **全球治理的建设力量**，积极参与全球治理体系改革和建设，努力扩大各方共同利益，推动全球治理架构更为均衡有效；
 4. **文明互鉴的促进力量**，增进世界各国不同文明沟通对话，加强治国理政交流，深化教育、科技、文化、地方、民间、青年等领域交往。
 
-22.《中共中央国务院关于实施就业优先战略促进高质量充分就业的意见》指出，全面贯彻劳动者自主就业、市场调节就业、政府促进就业和鼓励创业的方针
+习近平主席在和平共处五项原则发表70周年纪念大会上的讲话中指出，和平共处五项原则为人类进步事业作出了不可磨灭的历史贡献：
+
+1. 和平共处五项原则为国际关系和国际法治树立了历史标杆。五项原则涵盖国与国在政治、安全、经济、外交等方面和平共处的基本规范，**为各国践行国际法治精神、建立正确相处方式提供了准确清晰、行之有效的行为准则**。
+2. 和平共处五项原则为不同社会制度国家建立和发展关系提供了正确指导。五项原则**为和平解决国家间历史遗留问题及国际争端开辟了崭新道路**，超越了“集团政治”“势力范围”等陈旧狭隘观念和对立对抗思维。
+3. 和平共处五项原则为发展中国家团结合作、联合自强汇聚了强大合力。五项原则**促进了南南合作，推动了南北关系改善和发展**。
+4. 和平共处五项原则为国际秩序改革和完善贡献了历史智慧。五项原则的出发点就是**维护弱小国家在强权政治环境中的利益和诉求，旗帜鲜明反帝、反殖、反霸**，为推动国际秩序朝着更加公正合理方向发展奠定了重要思想基础。
+
+22.《中共中央国务院关于实施就业优先战略促进高质量充分就业的意见》指出，全面贯彻**劳动者自主就业**、**市场调节就业**、**政府促进就业和鼓励创业**的方针
 
 1. 以**推动高质量发展**为**基础**
 2. 以**实施就业优先战略**为**引领**（某个方向或目标的引导作用）
@@ -3216,3 +3535,59 @@
 3. 三是要以**开放包容的胸襟**，绘就推动构建人类命运共同体的文明画卷。
 
 （经典干扰选项：当今世界不存在**普世价值**，所以类似提法都是错的）
+
+24.习近平主席在二十国集团领导人第十九次峰会第一阶段会议关于“**抗击饥饿与贫困**”议题的讲话中指出：“我曾在二十国集团领导人峰会上提出，世界繁荣稳定不可能建立在贫者愈贫、富者愈富的基础之上，各国应该推动更加包容、更加普惠、更有韧性的全球发展。中国主办二十国集团领导人杭州峰会时，首次将发展议题放到宏观经济政策协调的中心位置，发布《二十国集团落实2030年可持续发展议程行动计划》和《二十国集团支持非洲和最不发达国家工业化倡议》。这次里约热内卢峰会把‘**构建公正的世界和可持续的星球**’作为**主题**，把‘**消除饥饿贫困**’作为**首要议题**，并决定成立‘**抗击饥饿与贫困全球联盟**’。从杭州到里约热内卢，我们都致力于同一个目标，即建设一个共同发展的公正世界。”
+
+25.外交部长王毅在向随行记者介绍习近平主席出席金砖国家领导人第十六次会唔情况时指出，金砖机制之所以能持续壮大，金砖合作之所以能常葆活力，关键在于**以开放包容为襟怀**，**以合作共赢为目标**，**以公平正义为追求**。
+
+26.2024年11月15日习近平主席在**亚太经合组织工商领导人峰会**上发表书面演讲，强调要携手推动普惠包容的经济全球化，更好惠及不同国家、不同群体。为此，要：
+
+1. **坚持创新驱动**，推动世界经济强劲增长；
+2. **坚持与时俱进**，推动全球经济治理体系改革；
+3. **坚持以人为本**，推动解决发展失衡问题。
+
+2024年11月15日，习近平主席在亚太经合组织工商领导人峰会上的书面演讲中指出，中国将**建设更高水平开放型经济新体制，继续和世界分享中国发展机遇**。开放是中国式现代化的鲜明标识。
+
+1. 2024年以来，中国**全面取消制造业领域外资准入限制措施**
+2. 首次在全国范围内**对跨境服务贸易建立负面清单管理制度**
+3. **推动电信、互联网、教育、文化、医疗等领域有序扩大开放**，主动对接《全面与进步跨太平洋伙伴关系协定》和《数字经济伙伴关系协定》等国际高标准经贸规则，稳步扩大制度型开放。
+4. 中国积极推广**144小时过境免签政策**，进一步便利了中外人员往来，“中国旅行”爆火出圈。下一步，中国将出台更多自主开放和单边开放政策，扩大面向全球的高标准自由贸易区网络，让中国开放的大门越开越大。
+
+【注】要注意“**自主开放和单边开放**”这个比较新的提法。
+
+27.**人力资源供需不匹配**，是当前我国就业领域面临的主要矛盾。解决这一矛盾，关键在于加快塑造素质优良、总量充裕、结构优化、分布合理的现代化人力资源。
+
+28.2024年10月2日，国家主席习近平同俄罗斯总统普京互致贺电，热烈庆祝**两国建交75周年**。习近平指出，中俄互为最大邻国，同为世界大国和主要新兴市场国家。建交75年来，双方从两国和两国人民的根本利益出发，在深刻总结历史经验的基础上，推动中俄关系不断提质升级，**永久睦邻友好**、**全面战略协作**、**互利合作共赢**成为两国关系**最本质的特征**。
+
+（中俄开展正常的经贸合作，**不针对第三方**，也不受第三方干扰。中方坚决反对对中国企业实施非法单边制裁，将采取必要措施，坚定维护中国企业的正当权益）
+
+29.一带一路的目标：**高标准、可持续、惠民生**。
+
+30.香港的**第一要务、立身之本**是**发展**。完善香港选举制度的**核心**是特区选举委员会重新构建和增加赋权；
+
+30a.“爱国者治港”是：
+
+* “一国两制”方针的**应有之义和核心要义**
+* 香港回归祖国、成为中华人民共和国的一个特别行政区、纳入国家治理体系后的一个**基本政治伦理**和**政治规则**
+* 事关国家主权、安全、发展利益，事关香港长期繁荣稳定的**根本原则**
+
+31.“**台独**”分裂是祖国统一的**最大障碍**，是民族复兴的严重隐患。
+
+32.全面开放的新格局：
+
+1. 全方位(对所有国家都开放)
+2. 多层次(分批次)
+3. 宽领域(各方面各领域)
+4. 陆海内外联动，东西双向互济
+5. 是塑造我国国际经济合作和竞争新优势的**战略抉择**，与时俱进提升我国经济发展水平的**战略抉择**
+6. 是把握未来发展主动权的战略性布局和
+7. 明确了我国经济现代化的**路径选择**
+
+33.“两不愁 三保障”
+
+* 不愁吃不愁穿
+* 义务教育、基本医疗、住房安全有保障
+
+34.“五个一批”工程：
+
+①生产脱贫一批②易地搬迁脱贫一批③生态补偿脱贫一批④发展教育脱贫一批 ⑤社会保障兜底一批
