--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1509,7 +1509,7 @@
 
 12.中国特色社会主义的**最本质特征**：**中国共产党领导**
 
-12a.中国特色社会主义的**最鲜明的特色**：**理论创新和实践创新、制度自信和文化自信紧密结合**。
+* 中国特色社会主义的**最鲜明的特色**：**理论创新和实践创新、制度自信和文化自信紧密结合**。
 
 13.马克思主义政党第一位的能力：**政治领导力**
 
@@ -1558,9 +1558,9 @@
 | 经济体制改革           | 重点     |
 | 重要领域和关键环节改革 | 突破口   |
 
-**制度建设**是**贯穿**在**政治建设、思想建设、组织建设、作风建设、纪律建设**之中的。
+* **制度建设**是**贯穿**在**政治建设、思想建设、组织建设、作风建设、纪律建设**之中的。
 
-19a.深化党的建设制度改革的**着力点**是：**调动全党抓改革、促发展的积极性、主动性、创造性**
+* 深化党的建设制度改革的**着力点**是：**调动全党抓改革、促发展的积极性、主动性、创造性**
 
 20.**摸着石头过河**是**富有中国特色、符合中国国情的改革方法**
 
@@ -1603,12 +1603,13 @@
 
 24.高质量发展
 
-| 高质量发展                         | 地位                         |
-| ---------------------------------- | ---------------------------- |
-| 加快实现高水平科技自立自强         | 推动高质量发展的**必由之路** |
-| 加快构建新发展格局                 | 推动高质量发展的**战略基点** |
-| 推进农业现代化                     | 实现高质量发展的**必然要求** |
-| 更好统筹质的有效提升和量的合理增长 | 推动高质量发展的**重要举措** |
+| 高质量发展                         | 地位                                         |
+| ---------------------------------- | -------------------------------------------- |
+| 加快实现高水平科技自立自强         | 推动高质量发展的**必由之路**                 |
+| 加快构建新发展格局                 | 推动高质量发展的**战略基点**                 |
+| 推进农业现代化                     | 实现高质量发展的**必然要求**                 |
+| 更好统筹质的有效提升和量的合理增长 | 推动高质量发展的**重要举措**                 |
+| 发展新质生产力                     | 推动高质量发展的**内在要求**和**重要着力点** |
 
 25.要坚持把**发展经济的着力点**放在**实体经济**上；
 
@@ -3546,7 +3547,7 @@
 2. **坚持与时俱进**，推动全球经济治理体系改革；
 3. **坚持以人为本**，推动解决发展失衡问题。
 
-2024年11月15日，习近平主席在亚太经合组织工商领导人峰会上的书面演讲中指出，中国将**建设更高水平开放型经济新体制，继续和世界分享中国发展机遇**。开放是中国式现代化的鲜明标识。
+2024年11月15日，习近平主席在亚太经合组织工商领导人峰会上的书面演讲中指出，中国将**建设更高水平开放型经济新体制，继续和世界分享中国发展机遇**。
 
 1. 2024年以来，中国**全面取消制造业领域外资准入限制措施**
 2. 首次在全国范围内**对跨境服务贸易建立负面清单管理制度**
@@ -3591,3 +3592,7 @@
 34.“五个一批”工程：
 
 ①生产脱贫一批②易地搬迁脱贫一批③生态补偿脱贫一批④发展教育脱贫一批 ⑤社会保障兜底一批
+
+35.为什么“人类需要保护绿色，不需要绿色保护主义”：
+
+​	**中国新能源产业在开放竞争中练就了真本事，代表的是先进产能，不仅丰富了全球供 给，缓解了全球通胀压力，也为全球应对气候变化和绿色转型作出巨大贡献。**不论是从比较优势还是全球市场需求角度看，都不存在所谓“中国产能过剩问题”。**炒作中国新能源“产能过剩”，是经济逆全球化和保护主义、单边主义的新托辞，其最大企图是遏制打压中国优势产业。**保护主义与公平竞争原则背道而驰，非但保护不了本国产业，还会损害国家间 经济关系，不利于全球共同发展进步。 	**建设绿色家园是人类的共同梦想，中国致力于推动共建地球生命共同体，积极参与全球环境治理，是全球生态文明建设的重要<u>参与者、贡献者、引领者</u>。**中国积极推动新能源 产业发展，助力各国获得清洁、可靠、用得起的能源，为全球应对气候变化作出重要贡献。 **中国将坚定不移走绿色发展之路，继续为全球绿色转型提供<u>重要动力</u>**。
